--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,1 +1,122 @@
-<p>blogs works!</p>
+<div class="container-fluid bg-surface-primary border-bottom pt-6">
+  <div class="mb-npx">
+    <div class="row align-items-center">
+      <div class="col-sm-6 col-12 mb-4 mb-sm-0">
+        <!-- Title -->
+        <h1 class="h2 mb-0 ls-tight">Blogs</h1>
+      </div>
+      <!-- Actions -->
+
+      <div class="col-sm-6 col-12 text-sm-end">
+        <div class="mx-n1">
+          <a  class="btn d-inline-flex btn-sm btn-primary mx-1" (click)="openModalFunction(myModalContent)">
+                  <span class=" pe-2">
+                    <i class="bi bi-plus"></i>
+                  </span>
+            <span>Create Blogs</span>
+          </a>
+        </div>
+      </div>
+
+    </div>
+    <!-- Nav -->
+    <ul class="nav nav-tabs mt-4 overflow-x border-0">
+
+
+    </ul>
+  </div>
+</div>
+
+<main class="py-6 bg-surface-secondary">
+  <div class="container-fluid">
+    <!-- Card stats -->
+    <div class="card shadow border-0 mb-7">
+      <div class="card-header">
+        <h5 class="mb-0">Blogs List</h5>
+      </div>
+      <div class="table-responsive">
+        <table class="table table-hover table-nowrap">
+          <thead class="thead-light">
+          <tr>
+            <th scope="col">Title</th>
+            <th scope="col">Create Date</th>
+            <th scope="col">Author</th>
+            <th scope="col">Updated Date</th>
+            <th scope="col">Description</th>
+            <th></th>
+          </tr>
+          </thead>
+          <tbody>
+          <tr *ngFor="let item of blogsList; index as i">
+            <td>
+              <a class="text-heading" [routerLink]="['/blogs/details', item.blogId]">
+                {{item.blogTitle | titlecase}}
+              </a>
+            </td>
+            <td>
+              {{item.createdAt | date}}
+            </td>
+            <td>
+              <a class="text-heading font-semibold">
+                {{item.author.name | titlecase}}
+              </a>
+            </td>
+            <td>
+              {{item.updatedAt | date}}
+            </td>
+            <td>
+              <span class="badge badge-lg badge-dot">
+                {{item.blogDescription.slice(0,100)}}
+              </span>
+            </td>
+            <td class="text-end">
+              <a  class="btn btn-sm btn-neutral" [routerLink]="['/blogs/details', item.blogId]">View</a>
+              <button type="button" class="btn btn-sm btn-square btn-neutral text-danger-hover" (click)="deleteBlog(item.blogId)">
+                <i class="bi bi-trash"></i>
+              </button>
+            </td>
+          </tr>
+
+          </tbody>
+        </table>
+      </div>
+      <div class="card-footer border-0 py-5">
+        <span class="text-muted text-sm">Showing {{ itemsPerPage }} items out of {{totalCount}} results found</span>
+      </div>
+    </div>
+  </div>
+</main>
+
+
+<ng-template #myModalContent let-modal>
+
+  <div class="modal-header">
+    <button type="button" class="close" (click)="modal.dismiss()">
+      <span>&times;</span>
+    </button>
+  </div>
+
+  <div class="modal-body">
+    <form [formGroup]="addBlogFrom" (ngSubmit)="createBlog()">
+      <div class="form-group">
+        <label class="center-block">Title:
+          <input class="form-control" formControlName="blogTitle">
+        </label>
+      </div>
+
+      <div class="form-group">
+        <label class="center-block">Description:
+          <textarea class="form-control" formControlName="blogDescription"></textarea>
+        </label>
+      </div>
+      <button type="submit" class="btn btn-primary">Save</button>
+
+    </form>
+  </div>
+
+  <div class="modal-footer">
+    <button type="button" class="btn btn-secondary" (click)="modal.close()">Close</button>
+  </div>
+
+</ng-template>
+
