--- a/src/shared/layout/dashboard/dashboard.component.html
+++ b/src/shared/layout/dashboard/dashboard.component.html
@@ -1,1 +1,51 @@
-<router-outlet></router-outlet>
+<loading></loading>
+
+<div class="d-flex flex-column flex-lg-row h-lg-full bg-surface-secondary">
+  <nav class="navbar show navbar-vertical h-lg-screen navbar-expand-lg px-0 py-3 navbar-light bg-white border-bottom border-bottom-lg-0 border-end-lg" id="navbarVertical">
+    <div class="container-fluid">
+      <button class="navbar-toggler ms-n2" type="button" data-bs-toggle="collapse" data-bs-target="#sidebarCollapse" aria-controls="sidebarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <a class="navbar-brand py-lg-2 mb-lg-5 px-lg-6 me-0" href="#">
+      </a>
+
+      <!-- Collapse -->
+      <div class="collapse navbar-collapse" id="sidebarCollapse">
+        <!-- Navigation -->
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" routerLink="['/blogs']">
+              <i class="bi bi-house"></i> Blogs
+            </a>
+          </li>
+
+        </ul>
+        <!-- Divider -->
+        <hr class="navbar-divider my-5 opacity-20">
+        <!-- Navigation -->
+        <!-- Push content down -->
+        <div class="mt-auto"></div>
+        <!-- User (md) -->
+        <ul class="navbar-nav">
+
+          <li class="nav-item">
+            <a class="nav-link" (click)="logout()" >
+              <i class="bi bi-box-arrow-left"></i> Logout
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Main content -->
+  <div class="h-screen flex-grow-1 overflow-y-lg-auto">
+    <!-- Header -->
+    <header class="bg-surface-primary border-bottom pt-6">
+
+    </header>
+    <!-- Main -->
+
+    <router-outlet></router-outlet>
+
+  </div>
+</div>
